--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,12 @@
 {
-	"port": 8080,
-	"bodyLimit": "100kb",
-	"corsHeaders": ["Link"]
+  "port": 8080,
+  "bodyLimit": "100kb",
+  "corsHeaders": [
+    {
+      "origin": true,
+      "methods": "GET,HEAD,PUT,PATCH,POST,DELETE",
+      "credentials": true,
+      "exposedHeaders": ["x-auth-token"]
+    }
+  ]
 }
