--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "mongoose": "^5.2.5",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
     "rebass": "^2.0.0-10",
     "resource-router-middleware": "^0.7.0",
     "styled-components": "^3.3.3"
