--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.5",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
+    "passport-twitter-token": "^1.3.0",
+    "querystring": "^0.2.0",
     "rebass": "^2.0.0-10",
+    "request": "^2.87.0",
     "resource-router-middleware": "^0.7.0",
     "styled-components": "^3.3.3"
   },
