--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "test-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
+  "proxy": "http://localhost:8080/",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
