--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-twitter-auth": "^0.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
