--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport": "^0.4.0",
     "passport-twitter-token": "^1.3.0",
     "querystring": "^0.2.0",
+    "react-twitter-auth": "^0.0.12",
     "rebass": "^2.0.0-10",
     "request": "^2.87.0",
     "resource-router-middleware": "^0.7.0",
